# SreeBase

./: .gitignore  .gitlab-ci.yml  404.html  CONTRIBUTING.md  Dockerfile  README.md  about.html  api.html  app_integration_demo.py  build_installer.py  docker-compose.yml  faq.html  index.html  markdown-page.html  mkdocs.yml  pyproject.toml  roadmap.html  sitemap.xml  syntax.html  tutorials.html
.github/workflows/: ci.yml  docs.yml
about/: index.html
api/: index.html
assets/css/: styles.932c0d15.css  styles.93df9605.css
assets/js/: 0480b142.229df17a.js  0480b142.d0a0f51a.js  0480b142.dfc17b3c.js  0aebc013.00f15399.js  0dffb83e.b1df8fb4.js  0dffb83e.c23f3476.js  17896441.1f12c7d7.js  22734668.c7512730.js  27ec7b27.e8896bd9.js  285.ca7bb4cc.js  2966845b.125473dc.js  3d8d21df.2703f719.js  3d8d21df.c77493fe.js  4c678320.246ff5b1.js  (+29 more)
docs/: about.md  api.md  faq.md  index.md  roadmap.md  syntax.md
faq/: index.html
reddybase/: __init__.py
roadmap/: index.html
search/: search_index.json
site/: 404.html  index.html
sreebase/: __init__.py  __main__.py  database.py  demo.py  errors.py
stylesheets/: extra.css
syntax/: index.html
tests/: test_executor.py  test_lexer.py  test_network.py  test_parser.py  test_security.py  test_storage.py
tutorials/: aggregations.html  cheat-sheet.html  concepts.html  delete.html  example-app.html  first-database.html  index.html  indexes.html  insert.html  installation.html  read.html  security.html  storage.html  troubleshooting.html  update.html
website/: docusaurus.config.js  package-lock.json  sidebars.js
(+66 files in other folders)
