[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sreebase"
version = "1.0.0"
description = "A Lightweight, Educational Bracketless NoSQL Database"
readme = "README.md"
authors = [
  { name="Gowtham Reddy" }
]
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
sreebase = "sreebase.__main__:main"

[tool.setuptools.packages.find]
include = ["sreebase*", "reddybase*"]

[project.optional-dependencies]
docs = [
    "mkdocs",
    "mkdocs-material",
    "pymdown-extensions",
]
dev = [
    "pytest",
    "mkdocs",
    "mkdocs-material",
    "pymdown-extensions",
]
